--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
 .back-video{
     position: fixed;
     background-position: center;
+    top: 0;
     right: 0;
     bottom: 0;
     z-index: -1;
